# robot_generator

./: CMakeLists.txt  README.md  START.bash  package.xml
config/: default_robot_control.yaml  mk_robot_control.yaml  trial2_robot_control.yaml
launch/: mk_simualtion.launch  simulation.launch  trial2_simualtion.launch
scripts/: IK_demo.py  RRbot_IK_demo.py  RRbot_talker.py  key_teleop.py  mk_info.txt  robot_class.py  simulation_template.launch  urdf_readme.txt
urdf/: default_robot.gazebo  default_robot.xacro
urdf/mk_root/: mk_robot.gazebo  mk_robot.xacro
urdf/trial2_root/: trial2_robot.gazebo  trial2_robot.xacro
